messageApplication/webapp/msg-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: msg-pod
  name: msg-pod
spec:
  containers:
  - image: shivamrana28/msg:3.0.29
    name: msg-pod
    ports:
    - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: msg-svc
spec:
  type: ClusterIP
  selector:
    run : msg-pod
  ports:
  - port: 5000
    targetPort: 5000
