messageApplication/webapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msgapp-ingress
  namespace: msg
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: msgapp.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: msg-svc
            port:
              number: 5000
